update 22 files and delete 1 file

--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: none;
+    border: none !important;
     background: transparent !important;
     color: #BE9E67 !important;
     text-decoration: underline !important;
