--- a/assets/css/checkout.css
+++ b/assets/css/checkout.css
@@ -46,10 +46,6 @@
     font-family: "Arca Majora 3", Sans-serif;
 }
 
-.woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required input[type="checkbox"]{display:none !important;}
-.woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required label{font-family: "Lato", Sans-serif;font-weight: 400;font-style: italic;cursor: pointer;display: block;width:100%;margin: 0px 10px 10px 0px;position: relative;}
-.woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required label:before{font-size: calc( 20px / 1.2 );width: 20px;height: 20px;background-color: #FFFFFF;border-color: #A5AFB8;border-width: 1px;border-style: solid;border-radius: 4px;content: '';text-align: center;display: inline-block;;vertical-align: middle;-webkit-box-sizing: content-box;-moz-box-sizing: content-box;box-sizing: content-box;margin-right: 10px;}
-
 .woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required {}
 
 .woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required input[type="checkbox"] {}
@@ -110,19 +106,23 @@
     color: #BE9D68;
 }
 
-
 .woocommerce-checkout .step-shipping {}
 
-.woocommerce-checkout .step-payment:hover {
+.woocommerce-checkout .step-payment:hover,
+.woocommerce-checkout .step-shipping:hover {
     cursor: pointer;
 }
 
-.woocommerce-checkout .step-payment:hover .elementor-element-populated.lazyloaded {
-    --e-bg-lazyload: url(/wp-content/uploads/2023/08/etape-complete-1.png) !important;
+.woocommerce-checkout .step-shipping:not(.active) .elementor-element-populated.lazyloaded {
+    --e-bg-lazyload: url(/wp-content/uploads/2023/08/etape-valide.png) !important;
 }
 
-.woocommerce-checkout .step-payment:hover .elementor-widget-heading:first-child .elementor-heading-title {
-    color: white !important;
+.woocommerce-checkout .step-shipping:not(.active) .elementor-widget-heading:first-child .elementor-heading-title {
+    display: none;
+}
+
+.woocommerce-checkout .step-shipping:not(.active) .elementor-widget-heading:nth-child(2) .elementor-heading-title {
+    color: #BE9D68 !important;
 }
 
 .woocommerce-checkout .step-payment:hover .elementor-widget-heading:nth-child(2) .elementor-heading-title {
@@ -131,4 +131,253 @@
 
 .woocommerce-checkout .step-payment.active .elementor-widget-heading:nth-child(2) .elementor-heading-title {
     color: #262626 !important;
+}
+
+
+.recapitulatif {
+    display: block !important;
+}
+
+.recapitulatif .elementor-element-populated {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    width: 320px;
+    padding: 24px 30px !important;
+    border-radius: 3px;
+    height: auto;
+    display: block;
+}
+
+.recapitulatif .woocommerce-checkout-review-order tr th {
+    color: #262626 !important;
+}
+
+.recapitulatif .woocommerce-checkout-review-order tr.cart_item td.product-name {
+    line-height: 1.2em !important;
+}
+
+.recapitulatif .woocommerce-checkout-review-order tfoot tr#pi-overall-estimate-checkout td {
+    font-style: italic;
+}
+
+.recapitulatif #custom_paiement_btn:hover {
+    background-color: #BE9E67;
+}
+
+.recapitulatif #place_order:hover {
+    background-color: #BE9E67;
+}
+
+
+table.shopengine_woocommerce_shipping_methods {
+    table-layout: fixed;
+}
+
+table.shopengine_woocommerce_shipping_methods td {
+    width: 100%;
+}
+
+
+table.shopengine_woocommerce_shipping_methods {
+    table-layout: fixed;
+}
+
+table.shopengine_woocommerce_shipping_methods td {
+    width: 100%;
+}
+
+.woocommerce-shipping-methods {
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0px 4px 15px 0px #BCBCBC;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.woocommerce-shipping-methods h3 {
+    font-size: 21px;
+    margin: 0;
+}
+
+.woocommerce-shipping-methods h4 {
+    font-size: 16px;
+}
+
+.woocommerce-shipping-methods .km-shipping-header {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    cursor: pointer;
+}
+
+.woocommerce-shipping-methods .km-shipping-header .drive-location{
+    font-style:italic;
+}
+.woocommerce-shipping-methods .drive-location-adress{
+    display: flex;
+    align-items: flex-start;
+    gap:1rem;
+    background-color: #f7f7f7;
+    padding: 15px 20px;
+    border-radius: 5px;
+    width: fit-content;
+    font-weight: 500;
+}
+.woocommerce-shipping-methods .drive-location-adress p {
+    margin-bottom:0;
+    line-height:1.4em;
+}
+
+.woocommerce-shipping-methods .km-shipping-option {
+    display: flex;
+}
+
+.woocommerce-shipping-methods .km-shipping-header .select-shipping,
+.woocommerce-shipping-methods .select-shipping-option {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #BE9D68;
+    border-radius: 50%;
+}
+
+.woocommerce-shipping-methods .km-shipping-header .select-shipping {
+    width: 22px;
+    height: 22px;
+}
+
+.woocommerce-shipping-methods .select-shipping-option {
+    width: 18px;
+    height: 18px;
+    margin-right: 8px;
+    min-width: 18px;
+}
+
+.woocommerce-shipping-methods .km-shipping-header .select-shipping::after,
+.woocommerce-shipping-methods .select-shipping-option::after {
+    content: '';
+    display: block;
+    background-color: #BE9D68;
+    border-radius: 50%;
+    width: 0;
+    height: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.woocommerce-shipping-methods.selected .km-shipping-header .select-shipping::after {
+    width: 13px;
+    height: 13px;
+}
+
+.woocommerce-shipping-methods .km-shipping-option.selected {
+    border-color: #BE9D68;
+    border-width: 2px;
+}
+
+.woocommerce-shipping-methods .km-shipping-option.selected .select-shipping-option::after {
+    width: 9px;
+    height: 9px;
+}
+
+.woocommerce-shipping-methods.selected .drive-datetimepicker {
+    display: block;
+}
+
+.woocommerce-shipping-methods .km-shipping-options {
+    flex-direction: row !important;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    display: none;
+}
+
+.woocommerce-shipping-methods.selected .km-shipping-options {
+    display: flex;
+}
+
+.woocommerce-shipping-methods .km-shipping-option {
+    width: calc(50% - 1rem);
+    padding: 15px;
+    border: 1px solid rgb(192, 192, 192);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.woocommerce-shipping-methods .km-shipping-option label {
+    font-weight: 600;
+    font-size: 16px;
+    margin-bottom: 15px;
+}
+
+.woocommerce-shipping-methods .km-shipping-option input[type="radio"] {
+    display: none;
+}
+
+.woocommerce-shipping-methods .km-shipping-option input[type="radio"]::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 13px;
+    height: 13px;
+    background-color: #BE9D68;
+    border-radius: 50%;
+    margin: 0 auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.woocommerce-shipping-methods .shipping-cost {
+    font-style: italic;
+    font-weight: 600;
+    color: #BE9E67;
+    margin-left: auto;
+    margin-right: 10px;
+}
+
+.woocommerce-shipping-methods .km-shipping-option:hover {
+    border-color: #BE9D68;
+}
+
+.woocommerce-shipping-totals,
+#shipping_method_0_drive,
+label[for="shipping_method_0_drive"],
+.shopengine-widget .shopengine-checkout-shipping-methods table tr td::before {
+    display: none;
+}
+
+/** Billing adress */
+
+.woocommerce-checkout .woocommerce-billing-fields__field-wrapper h4 {
+    font-size: 18px;
+}
+
+.woocommerce-billing-actions {
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+.woocommerce-billing-actions .bool-action {
+    color: #BE9E67;
+    background-color: #F7F7F7;
+    padding: 10px 24px !important;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 600;
+    border: 1px solid transparent;
+    margin-right: 14px;
+    font-size: 1em;
+}
+
+.woocommerce-billing-actions .bool-action:hover {
+    border-color: #BE9E67;
+}
+
+.woocommerce-billing-actions .bool-action.selected {
+    color: white;
+    background-color: #BE9E67;
+    border: 1px solid #BE9E67;
 }
